# Registration

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  eigen.cpp  eigen.h  fast_global_registration.cpp  io.cpp  kdtree_flann.cpp  kdtree_flann.h  registration.cpp  robust_kernel.cpp  robust_kernel.h  stitch.cpp  utils.cpp
include/: correspondence_checker.h  fast_global_registration.h  io.h  pointcloud.h  registration.h
include/registration/: feature.h  helper.h  io.h  pointcloud.h  registration.h  transformation_estimation.h
registration/: colored_icp.h  correspondence_checker.h  feature.h  helper.h  io.h  kdtree_flann+search_param.h  kdtree_flann.h  pointcloud.h  registration+transformation_estimation.h  registration.h  utils.h
source/: +eigen.cpp  +helper.cpp  colored_icp.cpp  correspondence_checker.cpp  estimate_normal.cpp  fast_global_registration.cpp  feature.cpp  helper.cpp  io.cpp  pointcloud-estimate_normal.cpp  pointcloud.cpp  registration+robust_kernel.cpp  registration+transformation_estimation.cpp  registration-colored_icp.cpp  registration-fast_global_registration.cpp  registration-icp_ransac.cpp  transformation_estimation.cpp  utils.cpp
test/: fast.cpp  icp.cpp  preprocess.cpp  ransac.cpp  read_configure.cpp
viewer/: CMakeLists.txt  view.cpp
visualizer/: CMakeLists.txt  visualizer.cpp
